[package]
name = "sensor-benchmark-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.10", features = ["tls"] }
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"

[build-dependencies]
tonic-build = "0.10"
